--- a/Posts.Service/Posts.Service.csproj
+++ b/Posts.Service/Posts.Service.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Zivver.Repository\Zivver.Repository.csproj" />
+    <ProjectReference Include="..\Posts.Repository\Posts.Repository.csproj" />
   </ItemGroup>
 
 </Project>
