--- a/Posts.Test/Posts.Test.csproj
+++ b/Posts.Test/Posts.Test.csproj
@@ -18,7 +18,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Zivver.Repository\Zivver.Repository.csproj" />
+    <ProjectReference Include="..\Posts.Repository\Posts.Repository.csproj" />
   </ItemGroup>
 
   <ItemGroup>
